# arion

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
arion-pallet/: Cargo.toml  README.md
arion-pallet/src/: lib.rs  weights.rs
chain-submitter/: Cargo.toml  Dockerfile  README.md  chain-registry-cache.env.example  chain-submitter.example.env
chain-submitter/src/: attestation.rs  main.rs  p2p_server.rs  validator_p2p.rs
common/: CLAUDE.md  Cargo.toml  README.md
common/src/: attestation_bundle.rs  lib.rs  merkle.rs  middleware.rs  redb_utils.rs  stun.rs  telemetry.rs  tls.rs  transport.rs
gateway/: Cargo.toml  Dockerfile  README.md  gateway.example.env  run-gateway.sh
gateway/src/: background.rs  config.rs  handlers.rs  helpers.rs  main.rs  metrics.rs  state.rs  validator_p2p.rs
listener/: Cargo.toml  README.md  dockerfile
listener/src/: main.rs
miner/: Cargo.toml  MINER_ONBOARDING.md  README.md  miner.example.toml  miner.toml  run-30-miners.sh  run-miner.sh
miner-cli/: Cargo.toml  README.md  miner-cli.example.env
miner-cli/src/: main.rs
miner/src/: config.rs  constants.rs  doc_replica.rs  flat_store.rs  gateway_keepalive.rs  handlers.rs  helpers.rs  inventory.rs  main.rs  p2p.rs  rebalance.rs  state.rs  state_sync.rs  version_check.rs
pos-circuits/: Cargo.toml  README.md
pos-circuits/benches/: pos_benchmark.rs
pos-circuits/src/: circuit.rs  commitment.rs  error.rs  hash.rs  lib.rs  merkle.rs  prover.rs  types.rs  verifier.rs
proptests/: Cargo.toml
proptests/proptest-regressions/: pos.txt
proptests/src/: attestation.rs  cluster.rs  codec.rs  crush.rs  lib.rs  pos.rs  registration.rs  strategies.rs  upload.rs
tools/: Cargo.toml  README.md
validator/: Cargo.toml  Dockerfile  README.md  validator.example.toml
validator/src/: attestation_aggregator.rs  backup.rs  blob_backup.rs  chain_registry.rs  config.rs  constants.rs  families.rs  helpers.rs  index_cache.rs  main.rs  metrics.rs  reputation.rs  state.rs  upload_progress.rs  warden_client.rs
validator/src/p2p/: gateway_handler.rs  mod.rs  submitter_handler.rs  warden_handler.rs
warden/: Cargo.toml  Dockerfile  README.md  warden.example.toml
warden/src/: api.rs  attestation.rs  config.rs  lib.rs  main.rs  p2p.rs  state.rs  submitter.rs  validator_p2p.rs
warden/src/audit/: challenger.rs  mod.rs  scheduler.rs  verifier.rs
