[workspace]
members = [
    "common",
    "miner",
    "gateway",
    "validator",
    "listener",
    "chain-submitter",
    "miner-cli",
    "tools",
    "warden",
    "pos-circuits",
    "proptests",
]
resolver = "2"

[workspace.dependencies]
# ============================================
# Web Framework
# ============================================
axum = { version = "0.8.8", features = ["multipart", "macros"] }
axum-server = { version = "0.8.0", features = ["tls-openssl"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "limit"] }

# ============================================
# Async Runtime & Utilities
# ============================================
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3.31"
futures-util = "0.3"
futures-lite = "2.3"
async-trait = "0.1"
async-stream = "0.3"

# ============================================
# Serialization
# ============================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
toml = "0.9.8"
parity-scale-codec = { version = "3.6", features = ["derive"] }
scale-info = { version = "2.11", features = ["derive"] }
serde-big-array = "0.5"

# ============================================
# HTTP Client
# ============================================
reqwest = { version = "0.13.1", default-features = false, features = ["json", "multipart", "stream", "rustls"] }

# ============================================
# Cryptography
# ============================================
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
blake3 = "1.8.2"
sha2 = "0.10"
chacha20poly1305 = "0.10.1"
ring = "0.17.14"
subtle = "2.5"
getrandom = "0.3"

# ============================================
# TLS/SSL
# ============================================
openssl = { version = "0.10", features = ["vendored"] }

# ============================================
# Iroh P2P
# ============================================
iroh = "0.95.1"
iroh-base = { version = "0.95.1", features = ["key"] }
iroh-blobs = { version = "0.97.0", features = ["fs-store"] }
iroh-gossip = "0.95"
iroh-docs = { git = "https://github.com/n0-computer/iroh-docs.git", rev = "0445e55" }

# ============================================
# Database
# ============================================
sled = "0.34"
redb = "2"

# ============================================
# Concurrency
# ============================================
dashmap = "6"
quick_cache = "0.6"
parking_lot = "0.12"

# ============================================
# CLI
# ============================================
clap = { version = "4.4", features = ["derive", "env"] }
rpassword = "7"
indicatif = "0.17"

# ============================================
# Logging & Tracing
# ============================================
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# ============================================
# Error Handling
# ============================================
anyhow = "1.0"
thiserror = "1.0"

# ============================================
# Utilities
# ============================================
rand = "0.9.2"
hex = "0.4.3"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3"
convert_case = "0.10.0"
semver = "1"
urlencoding = "2.1"
dotenvy = "0.15"

# ============================================
# Compression
# ============================================
flate2 = "1.0"
tar = "0.4"

# ============================================
# Erasure Coding
# ============================================
reed-solomon-erasure = "6.0"
mycrush = "1.0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bao-tree = "0.16.0"
crc32fast = "1.5.0"

# ============================================
# Metrics
# ============================================
prometheus-client = "0.22"
sysinfo = "0.30"

# ============================================
# S3 Storage
# ============================================
rust-s3 = { version = "0.35", default-features = false, features = ["use-tokio-native-tls"] }

# ============================================
# Substrate/Blockchain
# ============================================
subxt = { version = "0.44", default-features = false, features = ["native", "jsonrpsee"] }
subxt-signer = "0.44"
bip39 = { version = "2.2.2", features = ["rand", "unicode-normalization"] }

# ============================================
# File System
# ============================================
fs2 = "0.4"

# ============================================
# HTTP Utilities
# ============================================
multer = "3"
secrecy = "0.10"

# ============================================
# Testing
# ============================================
proptest = "1.4"
test-case = "3.3"
wiremock = "0.6"
http-body-util = "0.1"

# ============================================
# Release Profile — LTO + single codegen unit
# ============================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
