[package]
name = "chain-submitter"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Substrate / Subxt client
subxt = { workspace = true }
subxt-signer = { workspace = true }
parity-scale-codec = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
bip39 = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }

# HTTP server for warden attestation endpoint
axum = { workspace = true }
ed25519-dalek = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "chain-registry-cache"
path = "src/bin/chain-registry-cache.rs"

[[bin]]
name = "test-chain-storage"
path = "src/bin/test-chain-storage.rs"
