[package]
name = "common"
version = "0.1.16"
edition = "2024"

[features]
default = []
# Enable Ed25519 signature verification for attestations
verify = []
# Enable redb database helpers (open_database with repair logging)
redb = ["dep:redb"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { workspace = true }
reed-solomon-erasure = "6.0"
iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
# For CRUSH placement algorithm - using xxhash for deterministic hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tracing = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
tower = "0.5"
convert_case = "0.6"
tokio = { version = "1", features = ["process"] }
subtle = "2.5"
# For attestation bundle SCALE encoding
parity-scale-codec = { version = "3.6", features = ["derive"] }
scale-info = { version = "2.11", features = ["derive"] }
# For merkle tree hashing
blake3 = "1.5"
# Ed25519 keys — used by transport module and optionally for attestation verification
ed25519-dalek = { workspace = true }
# Optional: redb database helpers (enabled with "redb" feature)
redb = { version = "3", optional = true }
# Quinn transport foundation (coexists with iroh during migration)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
hex = "0.4"
# For serde support of large arrays (e.g., [u8; 64] for signatures)
serde-big-array = "0.5"
bytes = "1"
rand = { workspace = true }
# Portable math functions for cross-platform determinism (straw2 placement)
libm = "0.2"
sentry = "0.46.2"
sentry-tracing = "0.46.2"
tracing-subscriber.workspace = true
tracing-appender = "0.2.4"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
