[package]
name = "gateway"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-base = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
openssl = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reed-solomon-erasure = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
bao-tree = { workspace = true }
prometheus-client = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
quick_cache = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
