[package]
name = "listener"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
iroh = "0.95.1"
iroh-base = { version = "0.95.1", features = ["key"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
