[package]
name = "listener"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
iroh = { workspace = true }
iroh-base = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
openssl = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
