[package]
name = "miner-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Chain client
subxt = { version = "0.44", default-features = false, features = [
    "native",
    "jsonrpsee",
] }
subxt-signer = "0.44"
bip39 = "2.2"
parity-scale-codec = { version = "3", features = ["derive"] }
hex = "0.4"

# Miner node key (ed25519)
iroh-base = { version = "0.95.1", features = ["key"] }
