[package]
name = "miner-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Chain client
subxt = { workspace = true }
subxt-signer = { workspace = true }
bip39 = { workspace = true }
parity-scale-codec = { workspace = true }
hex = { workspace = true }

# Miner node key (ed25519)
iroh-base = { workspace = true }
