[package]
name = "miner"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
iroh = "0.95.1"
iroh-base = { version = "0.95.1", features = ["key"] }
iroh-blobs = { version = "0.97.0", features = ["fs-store"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
clap = { version = "4.0", features = ["derive", "env"] }
rand = "0.9"
fs2 = "0.4"
toml = "0.8"
futures = "0.3"
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
hex = "0.4"
bytes = "1"
dashmap = "6"
quick_cache = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
semver = "1"

[[bin]]
name = "generate_keypair"
path = "src/bin/generate_keypair.rs"
