[package]
name = "miner"
version = "0.1.2"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
fs2 = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
quick_cache = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
semver = { workspace = true }

[[bin]]
name = "generate_keypair"
path = "src/bin/generate_keypair.rs"
