[package]
name = "miner"
version = "0.1.16"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
fs2 = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
quick_cache = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
semver = { workspace = true }
quinn = "0.11"
ed25519-dalek = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "generate_keypair"
path = "src/bin/generate_keypair.rs"
