[package]
name = "pos-circuits"
version = "0.1.2"
edition = "2024"
description = "Plonky3-based Proof-of-Storage circuits for Hippius Arion"
license = "MIT"

[dependencies]
# Plonky3 core
p3-field = "0.4.2"
p3-baby-bear = "0.4.2"
p3-symmetric = "0.4.2"
p3-poseidon2 = "0.4.2"
p3-merkle-tree = "0.4.2"
p3-commit = "0.4.2"
p3-matrix = "0.4.2"
p3-air = "0.4.2"
p3-uni-stark = "0.4.2"
p3-challenger = "0.4.2"
p3-fri = "0.4.2"
p3-dft = "0.4.2"
p3-util = "0.4.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
wincode = "0.2.5"
wincode-derive = "0.2.3"

# Hashing
blake3 = "1.8.3"

# Utilities
anyhow = "1.0.100"
thiserror = "2.0.18"
log = "0.4.29"
rand = "0.9.2"
rand_chacha = "0.9.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
env_logger = "0.11"

[[bench]]
name = "pos_benchmark"
harness = false
