[package]
name = "proptests"
version = "0.1.0"
edition = "2024"
publish = false

# This crate exists solely to run property-based tests
# across multiple workspace crates.

[dependencies]
# Workspace crates under test
common = { path = "../common" }
warden = { path = "../warden" }

# External dependencies needed for tests
proptest = { workspace = true }
iroh = "0.95.1"
hex = "0.4"
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
