[package]
name = "tools"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "generate_registration_data"
path = "src/bin/generate_registration_data.rs"

[[bin]]
name = "verify_attestations"
path = "src/bin/verify_attestations.rs"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true }
parity-scale-codec = { workspace = true }
subxt = { workspace = true }
iroh-base = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
