[package]
name = "validator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
blake3 = "1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
rand = "0.9"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-lite = "2.3"
futures = "0.3"
iroh = "0.95.1"
iroh-blobs = { version = "0.97.0", features = ["fs-store"] }
iroh-gossip = "0.95"
iroh-base = { version = "0.95.1", features = ["key"] }
iroh-docs = { git = "https://github.com/n0-computer/iroh-docs.git", rev = "0445e55" }
clap = { version = "4.4", features = ["derive", "env"] }
bytes = "1.11.0"
mycrush = "1.0.1"
reed-solomon-erasure = "6.0"
toml = "0.8"
rust-s3 = { version = "0.35", default-features = false, features = [
    "use-tokio-native-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
prometheus-client = "0.22"
sysinfo = "0.30"
redb = "2"
dashmap = "6"
quick_cache = "0.6"
parking_lot = "0.12"
tempfile = "3"
bincode = "1.3"
parity-scale-codec = { version = "3.6", features = ["derive"] }
