[package]
name = "validator"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-lite = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
iroh-base = { workspace = true }
iroh-docs = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
mycrush = { workspace = true }
reed-solomon-erasure = { workspace = true }
toml = { workspace = true }
rust-s3 = { workspace = true }
chrono = { workspace = true }
prometheus-client = { workspace = true }
sysinfo = { workspace = true }
redb = "2"
dashmap = { workspace = true }
quick_cache = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
bincode = { workspace = true }
parity-scale-codec = { workspace = true }
