[package]
name = "warden"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
iroh = "0.95.1"
iroh-base = { version = "0.95.1", features = ["key"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.8"
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.9.8"
dashmap = "6"
parking_lot = "0.12"
sled = "0.34"
bincode = "1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.9.2"
getrandom = "0.3"
blake3 = "1.5"
hex = "0.4"
parity-scale-codec = { version = "3", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3"
