[package]
name = "warden"
version = "0.1.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
pos-circuits = { path = "../pos-circuits" }
iroh = { workspace = true }
iroh-base = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
openssl = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tempfile = { workspace = true }
